force-app/main/default/objects/Preferred_Staff__c/Preferred_Staff__c.object-meta.xml
<CustomObject>
    <label>Preferred Staff</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Preferred Staff Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferred Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>