force-app/main/default/objects/Preferred_Staff__c/fields/Preferred_Staff__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Staff__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Preferred Staff</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Preferred Staff</relationshipLabel>
    <relationshipName>Preferred_Staff</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>